--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 #nav {
     vertical-align: middle;
     background-image: linear-gradient(rgb(124, 180, 245) 0%, rgb(5, 85, 255) 100%);
+    border-bottom: 1.5px solid black;
 }
 
 #nav1 {
@@ -27,30 +28,50 @@
     justify-content: center;
     vertical-align: middle;
     background-image: linear-gradient(rgb(248, 250, 252) 0%, rgb(137, 138, 140) 100%);
+    border-radius: 0.5em;
 }
 
 #nav-img {
     border-radius: 0.25em;
     border: black 1px solid;
     width: 100%;
-    margin: 5%;
 }
 
 #nav-img1 {
     border-radius: 0.25em;
     border: black 1px solid;
     width: 100%;
-    margin: 5%;
-   
+}
+
+#nav-img:hover {
+    border: 4px solid rgb(167, 12, 15);
+    cursor: pointer;
+    width: 110%;
+    transition: all 0.3s ease-in-out;
+}
+
+#nav-img1:hover {
+    border: 4px solid rgb(167, 12, 15);
+    cursor: pointer;
+    width: 110%;
+    transition: all 0.3s ease-in-out;
+}
+
+#nav-thumb1 {
+    margin-left: 33%;
 }
 
 #thumb-header {
-    width: 50%;
+    width: 75%;
     background-image: url("https://res.cloudinary.com/dhqsixgmo/image/upload/v1673686491/Untitled_presentation_ilqwwo.svg");
+    border: 1.5px black solid;
+    border-radius: 0.25em;
 }
+
 
 #title {
     text-align: center;
+    padding-top: 2%;
 }
 
 #season-2 {
@@ -58,7 +79,7 @@
 }
 
 #nav-link:hover {
-    border: 1px solid black;
+    border: 2px solid rgb(170, 14, 14);
     border-radius: 0.25em;
     cursor: pointer;
 }
@@ -67,4 +88,10 @@
     background-color: black;
     border-radius: 0.25em;
     cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border: 2px solid rgb(150, 12, 12);
+}
+
+#guapa {
+    width: 40%;
 }
