--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@
     border-radius: 0.25em;
 }
 
-
 #title {
     text-align: center;
     padding-top: 2%;
@@ -82,6 +81,8 @@
     border: 2px solid rgb(170, 14, 14);
     border-radius: 0.25em;
     cursor: pointer;
+    background-color: black;
+    transition: all 0.3s ease-in-out;
 }
 
 #nav-season:hover {
