--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,13 @@
     border-radius: 0.25em;
 }
 
+#thumb-header1 {
+    width: 50%;
+    background-image: url("https://res.cloudinary.com/dhqsixgmo/image/upload/v1673686491/Untitled_presentation_ilqwwo.svg");
+    border: 1.5px black solid;
+    border-radius: 0.25em;
+}
+
 #title {
     text-align: center;
     padding-top: 2%;
