--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,14 @@
     border-radius: 0.5em;
 }
 
+#nav-th1 {
+    justify-content: center;
+    vertical-align: middle;
+    background-image: linear-gradient(rgb(24, 23, 23) 0%, rgb(165, 9, 9) 100%);
+    border-radius: 0.5em;
+    border: black 1px solid;
+}
+
 #nav-img {
     border-radius: 0.25em;
     border: black 1px solid;
